--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 .background {
   background-color: #2e2d4c;
   background-image: url(../img/background-foods-v4.png);
+  background-attachment: fixed;
 }
 .conteudo {
   width: 75%;
@@ -12,7 +13,7 @@
 .cabecalho {
   text-align: center;
   color: #fff;
-  margin: 100px auto;
+  margin: auto;
   padding: 30px;
 }
 
