modifiquei line-height e etc

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   background-attachment: fixed;
 }
 .conteudo {
+  line-height: 3rem;
   width: 75%;
   background-color: white;
   margin: 120px auto;
@@ -39,10 +40,11 @@
   color: #1915a3;
   text-decoration: underline;
 }
-.conteudo img {
+.avatar {
   float: left;
   width: 140px;
   padding: 20px;
+  margin-right: 20px;
 }
 .fonte--media {
   font-size: 1.7rem;
@@ -50,4 +52,11 @@
 .titulo {
   font-size: 1.9rem;
   margin-top: 50px;
+}
+.habilidades label {
+  width: 280px;
+  display: inline-block;
+}
+.habilidades progress {
+  accent-color: #2e2d4c;
 }
