--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,20 @@ body {
 .fotos img:hover {
   filter: none;
 }
+.btn-inicio {
+  font-size: 3rem;
+  color: #fff;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  text-align: center;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: white;
+  border-radius: 50px;
+  opacity: 0.3;
+}
+.btn-inicio:hover {
+  opacity: 1;
+}
