--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,16 @@ body {
   background-color: #2e2d4c;
   background-image: url(../img/background-foods-v4.png);
   background-attachment: fixed;
+  padding-bottom: 100px;
 }
 .conteudo {
   line-height: 3rem;
-  width: 75%;
+  width: 72%;
   background-color: white;
   margin: 120px auto;
   padding: 50px;
   border-radius: 10px;
+  margin-bottom: 220px;
 }
 .cabecalho {
   text-align: center;
@@ -72,6 +74,9 @@ body {
   border-radius: 10px;
   filter: grayscale(0.4);
 }
+.fotos {
+  text-align: center;
+}
 
 .fotos img:hover {
   filter: none;
@@ -92,4 +97,11 @@ body {
 }
 .btn-inicio:hover {
   opacity: 1;
+}
+.footer {
+  position: relative;
+  padding: 120px;
+  background-color: #161422;
+  color: #fff;
+  text-align: center;
 }
