--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,15 @@ body {
   padding: 20px;
   margin-right: 20px;
 }
+.fonte--grande {
+  font-size: 3.2rem;
+}
 .fonte--media {
   font-size: 1.7rem;
   padding-left: 20px;
+}
+.fonte--pequena {
+  font-size: 1.2rem;
 }
 ul {
   padding-left: 50px;
@@ -137,4 +143,38 @@ ul {
   margin-right: 50%;
   margin-top: -50px;
   transform: translateX(50%) rotate(45deg);
+}
+
+@media (max-width: 720px) {
+  body {
+    position: absolute;
+  }
+
+  .logo {
+    text-align: center;
+  }
+  .logo img {
+    width: 120px;
+    margin-top: 150px;
+  }
+  .fonte--grande {
+    font-size: 2.4rem;
+  }
+  .fonte--media {
+    font-size: 1.2rem;
+  }
+  .fonte--pequena {
+    font-size: 1.1rem;
+  }
+  .navigation li {
+    width: 95px;
+    font-size: 0.9rem;
+  }
+  .avatar {
+    width: 110px;
+  }
+  .fotos img {
+    width: 300px;
+    height: 180px;
+  }
 }
