--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
   background-color: white;
   margin: 120px auto;
   border-radius: 10px;
-  margin-bottom: 220px;
+  margin-bottom: 100px;
 }
 
 .cabecalho {
@@ -33,10 +33,27 @@ body {
 }
 .logo {
   text-align: center;
+  margin-top: 150px;
 }
 .logo img {
   width: 220px;
-  margin-top: 150px;
+}
+
+.pa2 {
+  padding: 6px;
+  color: #fff;
+}
+
+.pa4 {
+  padding: 12px;
+}
+
+.pr2 {
+  padding-right: 6px;
+}
+
+.pr4 {
+  padding-right: 12px;
 }
 .navigation li {
   display: inline-block;
@@ -83,6 +100,7 @@ ul {
 }
 .titulo--fonte {
   font-family: "Exo 2", sans-serif;
+  margin-left: 30px;
 }
 .habilidades label {
   width: 280px;
@@ -155,13 +173,11 @@ ul {
   body {
     position: absolute;
   }
-
   .logo {
     text-align: center;
   }
   .logo img {
     width: 120px;
-    margin-top: 150px;
   }
   .fonte--grande {
     font-size: 2.4rem;
@@ -182,5 +198,13 @@ ul {
   .fotos img {
     width: 300px;
     height: 180px;
+  }
+  .titulo {
+    font-size: 1.2rem;
+    margin-left: 20px;
+  }
+  .titulo--fonte {
+    font-family: "Exo 2", sans-serif;
+    margin-left: 20px;
   }
 }
