--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ ul {
   padding-left: 20px;
 }
 .titulo--fonte {
-  font-family: "Exo 2", sans-serif;
+  font-family: "lora, serif";
   margin-left: 30px;
 }
 .habilidades label {
@@ -201,7 +201,6 @@ ul {
   }
   .titulo {
     font-size: 1.2rem;
-    margin-left: 20px;
   }
   .titulo--fonte {
     font-family: "Exo 2", sans-serif;
